WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283330
AX: AccessibilityObject::visibleCharacterRange() returns the wrong result for vertical writing mode text that is only partially visible
https://bugs.webkit.org/show_bug.cgi?id=283330
Summary
AX: AccessibilityObject::visibleCharacterRange() returns the wrong result for...
Tyler Wilcock
Reported
2024-11-18 15:50:42 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-18 15:50:51 PST
<
rdar://problem/140158374
>
Tyler Wilcock
Comment 2
2024-11-18 16:02:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36824
EWS
Comment 3
2024-11-18 21:25:13 PST
Committed
286780@main
(9ac2c0188b7d): <
https://commits.webkit.org/286780@main
> Reviewed commits have been landed. Closing PR #36824 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug